--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "astro": "^4.10.1",
     "astro-robots-txt": "^1.0.0",
     "sharp": "^0.33.4",
+    "starlight-image-zoom": "^0.5.0",
     "starlight-links-validator": "^0.9.0"
   }
 }
